eng accept newform

--- a/frontend/server/views/newtenant.handlebars
+++ b/frontend/server/views/newtenant.handlebars
@@ -20,8 +20,8 @@
 
                 <div class="row">
                     <div class="col-md-12 form-group">
-			<label for="secondat">Seconday user</label>
-                        <input type="text" name="seconday" id="seconday" class="form-control" placeholder="secondary for tenant">
+			<label for="secondary">Secondary user</label>
+                        <input type="text" name="secondary" id="secondary" class="form-control" placeholder="secondary for tenant">
                     </div>
                 </div>
 
