--- a/frontend/server/views/manage.handlebars
+++ b/frontend/server/views/manage.handlebars
@@ -7,6 +7,7 @@
     	<li>Tenant {{name}}</li>
     	<li>Primary {{primary_user}}</li>
     	<li>Secondary {{secondary_user}}</li>
+	<li>Status {{work_flow_text}}</li>
     </ul> 
 </div>
 
