manager ready for html

--- a/admin_frontend/server/views/manage.handlebars
+++ b/admin_frontend/server/views/manage.handlebars
@@ -4,5 +4,14 @@
 <hr size="1" />
 <h1 class="text-center">Manage a Tenant</h1>
 <a> tenant_id = {{tenant_id}}</a>
+
+<div class="row">
+    <ul>
+    	<li>Tenant {{name}}</li>
+    	<li>Primary {{primary_user}}</li>
+    	<li>Secondary {{secondary_user}}</li>
+	<li>Status {{work_flow_text}}</li>
+    </ul> 
+</div>
  
 <hr size="1" />
