--- a/frontend/server/views/manage.handlebars
+++ b/frontend/server/views/manage.handlebars
@@ -1,14 +1,23 @@
 
 <br/><br/><br/>
 <h1 class="text-center">Manage Existing Tenant</h1>
+   	<div class="row">    
+    		<div class="col-sm-2">Tenant : </div>
+    		<div class="col-sm-4">{{name}}</div>
+    	</div>
 
-<div class="row">
-    <ul>
-    	<li>Tenant {{name}}</li>
-    	<li>Primary {{primary_user}}</li>
-    	<li>Secondary {{secondary_user}}</li>
-	<li>Status {{work_flow_text}}</li>
-    </ul> 
-</div>
+    	<div class="row">    
+    		<div class="col-sm-2">Primary : </div>
+    		<div class="col-sm-4">{{primary_user}}</div>
+    	</div>
 
 
+    	<div class="row">    
+    		<div class="col-sm-2">Secondary: </div>
+    		<div class="col-sm-4">{{secondary_user}}</div>
+    	</div>
+
+    	<div class="row">    
+    		<div class="col-sm-2">Status   : </div>
+    		<div class="col-sm-4">{{work_flow_text}}</div>
+    	</div>
